--- a/styles/slideshow.less
+++ b/styles/slideshow.less
@@ -202,6 +202,21 @@ body {
 		}
 	}
 
+	#next {
+		h1 {
+			font-size: 4em;
+			margin-bottom: 30px;
+		}
+		ul {
+			margin-top: 20px;
+			margin-left: 160px;
+			font-size: 2em;
+			li {
+				margin-bottom: 10px;
+			}
+		}
+	}
+
 	#end {
 		opacity: 1;
 		&.future {
