--- a/styles/slideshow.less
+++ b/styles/slideshow.less
@@ -62,6 +62,9 @@ body {
 	}
 
 	#me {
+		img {
+			width: 200px;
+		}
 		position: relative;
 		&.future, &.past { opacity: 0; }
 		&.active { opacity: 1; }
@@ -75,8 +78,10 @@ body {
 		}
 		ul {
 			padding: 0;
-			margin: 25px 0 0 210px;
-			list-style: none;			
+			list-style: none;
+			position: absolute;
+			bottom: 92px;
+			left: 325px;
 			li {
 				float: left;
 				margin-right: 10px;
@@ -179,7 +184,12 @@ body {
 
 	#example {
 		text-align: center;
-		font-size: 4em;
+		font-size: 7em;
+		opacity: 1;
+		&.past, &.future {
+			opacity: 0;
+		}
+		transition: opacity linear .5s;
 	}
 
 	#resources {
